deployment/dev/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: web2-fe
  annotations:
    cloud.google.com/backend-config: '{"default": "my-backendconfig"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  ports:
  - name: http
    port: 3030
    targetPort: 3000
  selector:
    app: web2-frontend
